# pytsboard

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
timeseries_dashboard/: app - Copy.py  app.py
timeseries_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
timeseries_dashboard/static/: index.html
timeseries_dashboard/static/assets/: index-4bf11816.css  index-6da293fa.css
